@@ -3,10 +3,12 @@
 Changelog: April 23, 2013
 = Code =
 * Added constant 'NONA_HOME_URL'
+* Hide middle footer widget area frame if it is empty
 * Refactored Featured Image display code into function `nona_show_featured_image( $size )`
 * Used 'NONA_HOME_URL' where appropriate
 
 = CSS =
+* Added 'hidden' class
 * Adjusted `img` and 'caption' related properties
 
 /** ------------------------------------------------------------------------- */
